# kmpolice

./: BREW_RELEASE.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT_CHECKLIST.md  LICENSE  README.md  kmp-interface-checker.toml.example
.github/workflows/: apt-pages.yml  release.yml
docs/: ios-usage-search.md  mr-algorithm-vnext.md  mr-diagnostics-algorithm.md  mr-process-report.md  swift-scan-feature-plan.md
packaging/homebrew/Formula/: kmpolice.rb
scripts/: brew-sha.sh  build-deb.sh  render_brew_formula.sh
src/: analyzer.rs  cli.rs  config.rs  git.rs  ios_usage.rs  lib.rs  main.rs  model.rs  mr.rs  report.rs  source.rs
src/parser/: kotlin.rs  mod.rs  swift.rs
