[package]
name = "kmpolice"
version = "0.1.19"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
globset = "0.4.18"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.1.2"
tree-sitter = "0.22.6"
tree-sitter-kotlin = "0.3.8"
tree-sitter-swift = "0.5.0"
walkdir = "2.5.0"
indicatif = "0.17.11"
rayon = "1.10.0"
